--- a/assets/css/elements.css
+++ b/assets/css/elements.css
@@ -7,6 +7,7 @@
 html {
     font-size: 62.5%;
     scroll-behavior: smooth;
+    text-align: justify;
 }
 
 body {
@@ -46,6 +47,14 @@ h6 {
 
 a {
     text-decoration: none;
+}
+
+article {
+    margin-bottom: 4rem;
+}
+
+p {
+    font-size: 2.5rem;
 }
 
 .logo {
