--- a/assets/css/classes.css
+++ b/assets/css/classes.css
@@ -23,6 +23,14 @@
     padding: 6.6rem var(--gap);
 }
 
+.imagem-salsicha {
+    border: 1px solid var(--white-color);
+    width: 40rem;
+    height: 30rem;
+    border-radius: 3rem;
+    margin-top: 2rem;
+}
+
 .text-spacing {
     max-width: 120rem;
     margin: 0 auto;
@@ -37,4 +45,9 @@
 
 .menu-spacing {
     height: 6.5rem;
+}
+
+.cores-align {
+    display: flex;
+    justify-content: space-around;
 }
