Contact form done

--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -3,5 +3,6 @@
     --pink-color: #FF5CB8;
     --orange-color: #FF9869;
     --white-color: #FFFFFF;
+    --grey-color: #B2B2B2;
     --gap: 3rem;
 }
