--- a/assets/css/classes.css
+++ b/assets/css/classes.css
@@ -31,6 +31,14 @@
     margin-top: 2rem;
 }
 
+.imagem-galeria-salsicha {
+    border: 1px solid var(--white-color);
+    width: 40rem;
+    height: 30rem;
+    border-radius: 3rem;
+    margin-top: 2rem;
+}
+
 .text-spacing {
     max-width: 120rem;
     margin: 0 auto;
@@ -47,7 +55,7 @@
     height: 6.5rem;
 }
 
-.cores-align {
-    display: flex;
-    justify-content: space-around;
+body .full-width {
+    width: 100%;
+    flex: 1 1 100%;
 }
